Styling fixes
Avatar was squashing when adjacent content was too large.

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,10 @@ h3 {
   margin: 0;
 }
 
+ul {
+  padding-left: 0;
+}
+
 li {
   list-style-type: none;
   padding: 10px;
@@ -29,10 +33,10 @@ li {
 }
 
 .tweet {
+  display: flex;
   width: 100%;
   max-width: 600px;
   padding: 10px;
-  display: flex;
   border: 1px solid #dad7d7;
   border-radius: 5px;
 }
@@ -40,11 +44,12 @@ li {
 .avatar {
   border-radius: 25px;
   height: 50px;
-  width: 50px;
   margin: 10px;
 }
 
 .tweet-details {
+  display: flex;
+  flex-direction: column;
   padding: 10px;
   > div > div {
     font-size: 14px;
